css/styles.css
body {
  position: relative;
  overflow-x: hidden;
  max-width: 100vw;
  max-height: 100vh;
  background-image: url(../img/background.png) , linear-gradient(#0e1562, #65e6f3);
  background-repeat: no-repeat;
  background-size: cover;
  font-family: impact;
}

.container {
  overflow: hidden;
}

.jumbotron {
  width: 37vw;
  min-width: 400px;
  background-color: rgba(73, 64, 97, 0);
  color: rgb(207, 248, 248);
  text-shadow: -3px 3px 5px black;
  margin-left: 10vw;
}

.jumbotron h1 {
  text-align: center;
}

.night {
  position: relative;
  width: 200%;
  height: 200%;
  -webkit-transform: rotateZ(150deg);
  transform: rotateZ(150deg);
}

.star {
  position: absolute;
  overflow: hidden;
  left: 105%;
  top: 50%;
  height: 2px;
  background: linear-gradient(-45deg, #ffffff, rgba(0, 0, 255, 0));
  -webkit-filter: drop-shadow(0 0 5px #eef1f8);
  filter: drop-shadow(0 0 5px #d7dff0);
  -webkit-animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
  animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
}

.star::before,
.star::after {
  content: "";
  position: absolute;
  top: calc(50% - 1px);
  right: 0;
  height: 2px;
  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #eaeef8, rgba (0, 0, 255, 0));
  -webkit-transform: translateX(20%) rotateZ(45deg);
  transform: translate(20%) rotateZ(45deg);
  border-radius: 100%;
  animation: shining 3000ms ease-in-out infinite;
}

.star::after {
  -webkit-transform: translateX(50%) rotateZ(45deg);
  transform: translate(50%) rotateZ(45deg);
}

.star:nth-child(1) {
  top: calc(15% - -50px);
  left: calc(20% - -30px);
 -webkit-animation-delay: 7000ms;
 animation-delay: 7000ms;
}

.star:nth-child(1)::before,
.star:nth-child(1)::after,
.star:nth-child(1)::after {
  -webkit-animation-delay: 7000ms;
  animation-delay: 7000ms;
}

.star:nth-child(2) {
  top: calc(40% - 506px);
  left: calc(10% - -570px);
 -webkit-animation-delay: 10000ms;
 animation-delay: 10000ms;
}

.star:nth-child(2)::before,
.star:nth-child(2)::after,
.star:nth-child(2)::after {
  -webkit-animation-delay: 10000ms;
  animation-delay: 10000ms;
}

.star:nth-child(3) {
  top: calc(40% - -600px);
  left: calc(70% - -500px);
 -webkit-animation-delay: 9000ms;
 animation-delay: 9000ms;
}

.star:nth-child(3)::before,
.star:nth-child(3)::after,
.star:nth-child(3)::after {
  -webkit-animation-delay: 9000ms;
  animation-delay: 9000ms;
}

@-webkit-keyframes tail {
  0% {
    width: 0;
  }
  30% {
    width: 100px;
  }
  100% {
    width: 0;
  }
}

@keyframes tail {
  0% {
    width: 0;
  }
  30% {
    width: 100px;
  }
  100% {
    width: 0;
  }
}

@-webkit-keyframes shining {
  0% {
    width: 0;
  }
  50% {
    width: 35px;
  }
  100% {
    width: 0;
  }
}

@keyframes shining {
  0% {
    width: 0;
  }
  50% {
    width: 35px;
  }
  100% {
    width: 0;
  }
}

@-webkit-keyframes shooting {
  0% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
  100% {
    -webkit-transform: translateX(300px);
    transform: translateX(300px);
  }
}

@keyframes shooting {
  0% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
  100% {
    -webkit-transform: translateX(300px);
    transform: translateX(300px);
  }
}

@-webkit-keyframes sky {
  0% {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  100% {
    -webkit-transform: rotate(405deg);
    transform: rotate(405deg);
  }
}

@keyframes sky {
  0% {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  100% {
    -webkit-transform: rotate(405deg);
    transform: rotate(405deg);
  }
}

h3,h2 {
  color: #2d4547;
  font-family: tahoma;
  font-weight: 600px;
  text-shadow: -2px 2px 1px gray;
}

col-12 {
  display: flex;
  justify-content: center;
}

#qOne {
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px; 
  min-height: 11vh;
  background-color: rgba(221, 235, 255, 0.61);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 40px;
  margin-top: -80px;
  margin-bottom: 10px;
  margin-left: 17vw;
  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562),  -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
}

#qOne h3 {
  padding-left: 30px;
}

#qOne input {
  width: 200px;
  padding-left: 20px;
}

#qTwo {
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px;
  min-height: 11vh;
  background-color: rgba(221, 235, 255, 0.61);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 30px;
  margin-bottom: 10px;
  margin-left: 13.5vw;
  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562), -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
  
}

#qTwo h3 {
  padding-left: 30px;
}

#qTwo select {
  width: 200px;
  padding-left: 20px;
}

#qThree {
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px;
  min-height: 20vh;
  background-color: rgba(221, 222, 255, 0.61);
  border: 5px inset rgba(65, 70, 117, 0.7);
  border-radius: 50px;
  padding: 10px;
  margin-bottom: 10px;
  margin-left: 10vw;
  box-shadow:  -20px 20px 20px 10px rgba(117, 136, 189, 0.384), -10px 2px 10px 5px inset rgba(78, 106, 114, 0.452);
}

#qThree h3 {
  color: rgb(49, 49, 53);
  padding-left: 30px;
}

#qFour {
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px;
  min-height: 11vh;
  background-color: rgba(221, 255, 252, 0.514);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 30px;
  margin-bottom: 10px;
  margin-left: 13.5vw;
  box-shadow:  -15px 25px 20px 10px rgba(82, 114, 196, 0.562), -10px 2px 10px 5px inset rgba(78, 106, 114, 0.452);
}

#qFour h3 {
  color: rgb(49, 49, 53);
}

#qFour select {
  position: absolute;
  width: 200px;
  left: 45px;
}

#qFive {
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px;
  min-height: 11vh;
  background-color: rgba(197, 220, 226, 0.534);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 30px;
  margin-bottom: 10px;
  margin-left: 17vw;
  box-shadow:  -10px 30px 20px 10px rgba(82, 114, 196, 0.562), -10px 2px 10px 5px inset rgba(78, 106, 114, 0.651);
}

#qFive select {
  position: absolute;
  width: 200px;
  left: 45px;
}

#qFive h3 {
  color: rgb(49, 49, 53);
}

.btn-lg {
  background-color: rgba(197, 220, 226, 0.425);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  margin-left: 17.5vw;
  box-shadow: -10px 2px 10px 5px inset rgba(78, 106, 114, 0.651);
}

#html {
  display: none;
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px; 
  min-height: 11vh;
  background-color: rgba(221, 235, 255, 0.61);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 40px;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: 17vw;
  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562),  -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
}

#rust {
  display: none;
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px; 
  min-height: 11vh;
  background-color: rgba(221, 235, 255, 0.61);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 40px;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: 17vw;
  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562),  -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
}

#python {
  display: none;
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px; 
  min-height: 11vh;
  background-color: rgba(221, 235, 255, 0.61);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 40px;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: 17vw;
  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562),  -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
}

#ruby {
  display: none;
  box-sizing: border-box;
  width: 25vw;
  min-width: 350px; 
  min-height: 11vh;
  background-color: rgba(221, 235, 255, 0.61);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  padding: 10px;
  padding-left: 40px;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: 17vw;
  box-shadow:  -30px 10px 20px 10px rgba(82, 114, 196, 0.562),  -10px 2px 10px 5px inset rgba(78, 95, 114, 0.452);
}

.refresh {
  background-color: rgba(197, 220, 226, 0.425);
  border: 5px inset rgba(85, 65, 117, 0.7);
  border-radius: 100px;
  box-shadow: -10px 2px 10px 5px inset rgba(78, 106, 114, 0.651);
}

